--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
         <link rel="stylesheet" href="assets/css/style.css" />
         <title>Mount react component</title>
 
+        <!-- Закомментированные скрипты используются во время разработки, вместо production версии -->
+        <!-- <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+        <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script> -->
+
         <!-- загружаем нужные библиотеки react -->
-        <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
-        <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+        <script
+            crossorigin
+            src="https://unpkg.com/react@18/umd/react.production.min.js"
+        ></script>
+        <script
+            crossorigin
+            src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"
+        ></script>
         <!-- библиотека для поддержки jsx -->
         <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
         <!-- Так как компонент будет создан с помощью jsx синтаксиса, добавляем атрибут type="text/babel" -->
