added comments in index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
         <!-- библиотека для поддержки jsx -->
         <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-        <!-- Так как компонент будет создан с помощью jsx синтаксиса, добавляем атрибут type="text/babel" -->
+        <!-- Наш скрипт -->
+        <!-- Так как компонент будет создан с помощью jsx синтаксиса, добавляем 
+            атрибут type="text/babel" и загружаем библиотеку babel/standalone -->
         <script
             type="text/babel"
             src="assets/scripts/init-component.js"
