fix css and js files

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             создавать компоненты с помощью jsx синтаксиса.
             <br />
             После выполнения условий описанных выше, пишем скрипт для создания
-            компонента. Если нужно встраивать компонент, по какому либо событию,
+            компонента. Если нужно встраивать компонент, по какому-либо событию,
             то создаём функцию в глобальном окружении и вызываем её, когда нужно
             создать
         </p>
